# chirp_projection_analysis

./: .gitignore  2d_pairs_visualizer.py  CYTHON_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements-cython.txt  setup.py  verify_cython_implementation.py
chirp_cython/: README.md  __init__.py  feature_transforms_cy.pyx  projection_vectorized_cy.pyx  validation_cy.pyx
chirp_python/: __init__.py  bin.py  bin2d.py  binner.py  chdr.py  chirp.py  classifier.py  computation_cache.py  data_moments.py  data_source.py  data_transforms.py  export_utils.py  feature_transforms.py  hdr.py  hex_bin.py  hex_bin2d.py  hex_binner.py  hex_coordinates.py  projection.py  projection_full.py  projection_simple.py  projection_thresholded.py  projection_vectorized.py  ranking.py  rect.py  rectangular_cover.py  rectangular_cover_enhanced.py  scorer.py  sorter.py  trainer.py  validation.py
tests/: __init__.py  benchmark_cython.py  test_cython_equivalence.py
