[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.0", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chirp_projection_analysis"
version = "1.0.0"
description = "CHIRP Projection Analysis with optional Cython acceleration"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
cython = [
    "Cython>=0.29.0",
]

[tool.setuptools.packages.find]
include = ["chirp_python*", "chirp_cython*"]
